--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,48 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Python/Django related ignores
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+*.sqlite3
+*.log
+
+# Django specific files
+db.sqlite3
+*.pot
+*.pyc
+local_settings.py
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# Static and media files
+/staticfiles/
+/mediafiles/
+
+# Node.js/React related ignores
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/build/
+.DS_Store
+
+# Logs
+logs/
+*.log
+
+# IDE specific files
+.vscode/
+.idea/
+
